--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -5,4 +5,4 @@
     &nbsp; &nbsp; &nbsp;近日，机电工程学院、数学与计算科学学院负责人带队先后前往佛山市顺德区冠宇达电源有限公司、日丰企业集团有限公司、中山市罗顿智能科技有限公司、惠州市博实结科技有限公司等单位开展访企拓岗暨校友走访活动。校企围绕人才培养、专业实习、产学研合作、毕业生推介等方面开展深入交流，并听取校友对校庆工作和学校高质量发展的意见建议。</p>
 <p>
     <br></p>
-<p style="text-align: center;"><img src="http://localhost:8080/upload/abc.jpg" alt="" data-href="" style=""></p>
+<p style="text-align: center;"><img src="" alt="" data-href="" style=""></p>
